- bios/country.c - moved keyb and font selection tables here from ikbd.c and
    initlinea.c, in an attempt to make next Changelog item easier (LVL)
- include/config.h - set CONF_UNIQUE_COUNTRY = 1 to save some room by
    including only one set of keyboard and fonts in the ROM (LVL)
- renamed back CS into CZ to please Petr; did not alter po/cs.po (LVL)
- vdi/vinput.c - rewrote some key stuff in C (MAD)

02. May. 2002
- Added John Elliott's "Desktop 1.2" patches - it's not enabled yet since
  it is quite instable, but you can enable it by compiling with "-DDESK1"
  and adding desk/desk1.c to your Makefile (THH).

04. May. 2002
- po/POTFILES.in - removed cli files (LVL)
- added experimental ACSI support in acsi.c; it does work on STonC but
  freezes the atari when no hard disk is present. Activate it by setting
  CONF_WITH_ACSI in include/config.h (LVL)
- bios/tosvars.h: hz_200 declared as volatile (LVL)

??. May. 2002
- ??? changes made by Thomas in following files: ???
  Makefile .cvsignore aes/crysbind.h aes/gem_rsc.c aes/gemgsxif.c 
  aes/gemsuper.c bios/linea.S desk/desk_rsc.c

10. May. 2002
- bios/bios.c: changed the init order. ACSI now works on STonC and STonX.
  (the trouble was, the DMA timeouts didn't work because the timer C was not
  enabled at the time when disk initialisation occurred) (LVL)
- added limited parallel port implementation (output only) (LVL)
- indented some files (LVL)
- bios/floppy.c: FastRAM floppy read/write (FRB usage was read-only); 
  flopvbl added (but still no efficient mediach()) (LVL)
- Makefile: added size checks for targets 192, 256, 512. (LVL)
- vdi/gsxasm1.S: made __ABLINE externally visible (LVL)
- updated some doc/ files (LVL)

14. May. 2002
- vdi/vinput.c - renamed to vdiinput.c, should hold all input stuff (MAD)
- vdi/vdiinput.c - implemented gloc_key in C, more will follow (MAD)

16. May. 2002
- vdi/vdimouse.S - moved/rewrote DIS_CUR to monobj.c:dis_cur()  (MAD)
