@@ -38,6 +38,11 @@
 extern void swp68w(int *);
 extern void swp68l(long *);
 
+extern long trap13(int, ...);
+extern long trap14(int, ...);
+
+
+
 #define swpw(x) swp68w(&x)
 #define swpl(x) swp68l(&x)
 
